[package]
name = "ll"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89", features = ["backtrace"] }
async-trait = "0.1.82"
bincode = "1.3.3"
crossbeam-channel = "0.5.13"
crossbeam-utils = { version = "0.8.20", features = ["nightly"] }
dirs = "5.0.1"
indexmap = { version = "2.5.0", features = ["serde", "rayon", "arbitrary"] }
itertools = "0.13.0"
petgraph = { version = "0.6.5", features = ["serde", "generate", "serde_derive", "rayon", "serde-1", "all"] }
rayon = "1.10.0"
serde = { version = "1.0.210", features = ["derive", "alloc", "rc"] }
smallvec = { version = "1.13.2", features = ["arbitrary", "serde"] }
strum = { version = "0.26.3", features = ["derive", "phf", "strum_macros"] }
tempfile = { version = "3.12.0", features = ["nightly"] }
time = { version = "0.3.36", features = [
  "formatting",
  "parsing",
  "macros",
  "serde-well-known",
] }
tokio = { version = "1.40.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "env-filter",
  "once_cell",
  "parking_lot",
  "serde",
  "tracing",
  "tracing-serde",
  "valuable-serde",
] }
uuid = { version = "1.10.0", features = [
  "serde",
  "arbitrary",
  "atomic",
  "v4",
  "zerocopy",
] }
